--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,11 @@
     <title>My first website</title>
 </head>
 <body>
+<h1>Welcome to my website</h1>
+<hr>
+<img src="koala.jpg" width="100px" height="150px" align=left>
+<p>Hi, My name is Aida!<br>I'm learning how to write html code</p>
+
 
 </body>
 </html>
