sample landing page

--- a/Landing/landing.html
+++ b/Landing/landing.html
@@ -7,49 +7,92 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
-  <nav class="navbar navbar-expand-lg " style="background-color: #82C1C8;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="koala.png" width="35" height="35">
-        Aida Mohaghegh Zade</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg " style="background-color: #82C1C8;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="koala.png" width="35" height="35">
+          Aida Mohaghegh Zade</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid" style="padding: 7em; background-image: url(powerpoint-background-77.jpg);
+                                                    background-position: center;
+                                                    background-size: cover;">
+      <h1 class="display-1 text-center" style="font-weight: 400;">Welcome to my website</h1>
+      <figure class="text-center">
+        <blockquote class="blockquote">
+          <p>A dream does not become reality through magic; it takes sweat, determination, and hard work.</p>
+        </blockquote>
+      </figure>
+      <figcaption class="blockquote-footer text-center">
+        I'm a great believer in luck, and I find the harder I work, the more I have of it.
+      </figcaption>
+    </div>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" style="padding: 5em;">
+          <figure class="text-center">
+            <blockquote class="blockquote">
+              <p>Any fool can write code that a computer can understand. Good programmers write code that humans can understand.</p>
+            </blockquote>
+          </figure>
+          <figcaption class="blockquote-footer text-center">
+            <cite title="Source title">Martin Fowler</cite>
+          </figcaption>
+        </div>
       </div>
     </div>
-  </nav>
-  <body>
-    <div class="col-sm-6">
-        <img src="images.png" class="img-fluid" max-width: 100% alt="">
+</div>
+<div class="container-fluid" style="background-color: #34a0ac;">
+  <div class="row">
+    <div class="col-sm">
+      <img src="python-programming-language.jpg" class="img-thumbnail mx-auto mb-5 mt-5 d-block" alt="..." width="150px" height="150px">
     </div>
+    <div class="col-sm">
+      <img src="Node-JS-logo-vector-01.svg" class="img-thumbnail mx-auto mb-5 mt-5 d-block" alt="..." width="150px" height="150px">
+    </div>
+    <div class="col-sm">
+      <img src="sfa.jpg" class="img-thumbnail mx-auto mb-5 mt-5 d-block"  width="150px" height="150px">
+    </div>
+    <div class="col-sm">
+      <img src="django_original_logo_icon_146559.png" class="img-thumbnail mx-auto mb-5 mt-5 d-block" alt="..." width="150px" height="150px">
+    </div>
+  </div>
+</div>
+  <body>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+
+      </body>
 </html>
