--- a/javascript/home.html
+++ b/javascript/home.html
@@ -17,9 +17,8 @@
         <button id="changtext">Change text</button>
         <script>
             document.getElementById("changtext").onclick = function(){
-                alert("this is working")
-                var a = "it changed"
-                document.getElementById("text").innerHTML = a
+
+                document.getElementById("text").innerHTML = "it changed"
             }
         </script>
     </body>
